--- a/data-engineer.html
+++ b/data-engineer.html
@@ -256,7 +256,7 @@ Engineering. Upload a file. Use Dropbox?...</p>
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/inmobi/jobs/1929054'>Job Application for Data Engineer at InMobi </a></h5> 
+<h5><a href='https://boards.greenhouse.io/inmobi/jobs/1929054'>Job Application for Data Engineer at InMobi </a></h5> 
 <p><span class="badge badge-light">Kansas City, MO</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -354,7 +354,7 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://spiceworks.applytojob.com/apply/LLCyQBex5U/Senior-Data-Engineer'>Senior Data Engineer - Spiceworks Inc - Career Page</a></h5> 
+<h5><a href='http://spiceworks.applytojob.com/apply/LLCyQBex5U/Senior-Data-Engineer'>Senior Data Engineer - Spiceworks Inc - Career Page</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -370,7 +370,7 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/minted/c2b7c4b7-5494-4f69-ae11-900ac63b1e18'>Minted - Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/minted/c2b7c4b7-5494-4f69-ae11-900ac63b1e18'>Minted - Data Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -382,11 +382,11 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/optimusride/dc2d83ea-b689-422c-88cb-9556df3aa2d4'>Optimus Ride - Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/optimusride/dc2d83ea-b689-422c-88cb-9556df3aa2d4'>Optimus Ride - Data Engineer</a></h5> 
 <p><span class="badge badge-light">Boston, MA  Boston</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nordcloud.join.com/jobs/448546-data-engineer'>Job @ Nordcloud (Munich): Data Engineer | JOIN</a></h5> 
+<h5><a href='https://nordcloud.join.com/jobs/448546-data-engineer'>Job @ Nordcloud (Munich): Data Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich Munich</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -403,7 +403,7 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p>14. Okt. 2019 ... MILES Mobility has a job opening for Data Engineer w/m/x in Berlin (published: 
 02.05.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/advent-software/job/oZTPafwB'>SS&C Advent Careers - Data Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/advent-software/job/oZTPafwB'>SS&C Advent Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light">Toronto, ON</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -439,7 +439,7 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light">S?o Paulo S?o Paulo  S?o Paulo Brazil</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tempus/jobs/4488773002'>Job Application for Informatics Data Engineer at Tempus</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tempus/jobs/4488773002'>Job Application for Informatics Data Engineer at Tempus</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
